fd.o #25019: allow TpPresenceMixin on connections without old-style Presence

Bug: https://bugs.freedesktop.org/show_bug.cgi?id=25019
Reviewed-by: Simon McVittie <simon.mcvittie@collabora.co.uk>