telepathy-glib/presence-mixin.c
@@ -386,12 +386,16 @@ tp_presence_mixin_emit_presence_update (GObject *obj,
 
   DEBUG ("called.");
 
-  presence_hash = construct_presence_hash (mixin_cls->statuses,
-      contact_statuses);
-  tp_svc_connection_interface_presence_emit_presence_update (obj,
-      presence_hash);
+  if (g_type_interface_peek (G_OBJECT_GET_CLASS (obj),
+      TP_TYPE_SVC_CONNECTION_INTERFACE_PRESENCE) != NULL)
+    {
+      presence_hash = construct_presence_hash (mixin_cls->statuses,
+          contact_statuses);
+      tp_svc_connection_interface_presence_emit_presence_update (obj,
+          presence_hash);
 
-  g_hash_table_destroy (presence_hash);
+      g_hash_table_destroy (presence_hash);
+    }
 
   if (g_type_interface_peek (G_OBJECT_GET_CLASS (obj),
       TP_TYPE_SVC_CONNECTION_INTERFACE_SIMPLE_PRESENCE) != NULL)
